# ai-video-analysis

./: .env.example  .gitignore  DETRtest.ipynb  GEMINI.md  GLIP.ipynb  GroundingDINO.ipynb  OWLv2.ipynb  README.md  main.py  output.txt  proposal.md  pyproject.toml  temp.py  v1.1-openai4caption.py  v1.2-noaudio-openai.py  v1.3-noimage-openai.py  v1.py  v2-1-openai.py  v2-1-segements-openai.py  v2-segements-openai.py  v2.1-segements-openai-ui.py  v2.2-segements-openai-ui.py  v2.3-segements-hazard-objects-with-AI-then-clip copy.py  v2.3-segements-hazard-region-gemini.py  v2.3-segements-hazard-region-yolo.py  v2.3-segements-hazard-region.py  v2.3-segements-hazard-yolo.py  v2.4-segements-hazard-region-groundingDINO.py  v2.5-segements-hazard-region-groundingDINO.py  v2.5-segements-hazard-region.py  v2.6-segements-hazard-region.py  v2.py  v3-noaudio-openai.py  v3-segements-openai-ui.py
